--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -496,6 +496,8 @@ CONFIG_RTC_CLASS=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_SYNC=y
