--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -178,7 +178,7 @@ CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ZRAM_DEBUG=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_UID_STAT=y
-CONFIG_UID_CPUTIME=y
+#CONFIG_UID_CPUTIME=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
