--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -113,10 +113,11 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  'interactive' governor for latency-sensitive workloads.
 
 config CPU_FREQ_DEFAULT_GOV_SMARTASS2
-        bool "smartassV2"
-        select CPU_FREQ_GOV_SMARTASS2
-        help
+	bool "smartassV2"
+	select CPU_FREQ_GOV_SMARTASS2
+	help
          Use the CPUFreq governor 'smartassv2' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -232,6 +233,12 @@ config CPUFREQ_DT
 	  systems which share clock and voltage across all CPUs.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SMARTASS2
+	tristate "'smartassV2' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	'smartassV2' - a "smart" governor
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
