defconfig : Enable seccomp filter

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -30,6 +30,7 @@ CONFIG_HIGHMEM=y
 # CONFIG_BOUNCE is not set
 CONFIG_ZSMALLOC=y
 CONFIG_SECCOMP=y
+CONFIG_SECCOMP_FILTER=y
 CONFIG_USE_OF=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="woods"
