kernel flasher: update status for oreo

--- a/outdir/MhDzMR/Makefile
+++ b/outdir/MhDzMR/Makefile
@@ -1,6 +1,6 @@
 NAME ?= MhDzMR
 
-VERSION ?= Ngt
+VERSION ?= Ngt-Oreo
 
 DEVICE ?= woods
 
@@ -8,17 +8,17 @@ DATE := $(shell date +'%Y%m%d-%H%M')
 
 ZIP := $(NAME)-$(VERSION)-$(DEVICE)-$(DATE).zip
 
-EXCLUDE := Makefile README.md *.git* MhDzMR-Ngt-woods*.zip *sha1
+EXCLUDE := Makefile README.md *.git* MhDzMR-Ngt-Oreo-woods*.zip *sha1
 
 all: $(ZIP)
 
 $(ZIP):
-	@echo 
-	@echo 
+	@echo
+	@echo
 	@echo " M H D Z U M A I R || D E V "
 	@echo " ______________________________________"
 	@rm -rf *.zip *.sha1 out_done
-	@echo 
+	@echo
 	@echo " Date : $(shell date +"%b-%d-%Y")"
 	@sleep 3.0;
 	@echo " Creating ZIP: $(ZIP)"
@@ -32,8 +32,6 @@ $(ZIP):
 	@du -h "$(NAME)-"*.zip*
 	@echo ""
 	@echo "Done."
-
-clean:
 	@rm -vf "$(NAME)-"*.zip*
 	@echo "Done."
 	@sleep 5.0;
