--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -1,10 +1,21 @@
+#
+# Woods configurations by Mohamed Zumair
+#
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_PHYS_OFFSET=0x40000000
 CONFIG_CROSS_COMPILE="arm-eabi-"
-CONFIG_LOCALVERSION="-MhDzMR™"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-MhDzMR™-v3.0"
+CONFIG_LOCALVERSION_AUTO=n
+CONFIG_DEFAULT_HOSTNAME="(MhDZuMaiR)"
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
+CONFIG_SWAP=y
+CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_IPV6=y
+CONFIG_NET_UDP_TUNNEL=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
@@ -73,6 +84,9 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG_DESTROY=y
+# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -167,6 +181,14 @@ CONFIG_NET_CLS_IND=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_DEVELOPER_WARNINGS=y
+CONFIG_MAC80211=m
+CONFIG_MAC80211_HAS_RC=y
+CONFIG_MAC80211_RC_MINSTREL=y
+CONFIG_MAC80211_RC_MINSTREL_HT=y
+CONFIG_MAC80211_RC_DEFAULT_MINSTREL=y
+CONFIG_MAC80211_RC_DEFAULT="minstrel_ht"
+CONFIG_MAC80211_MESH=y
+CONFIG_MAC80211_LEDS=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_MTD=y
@@ -242,8 +264,6 @@ CONFIG_WIND_CABC_BACKLIGHT_CTRL=n
 CONFIG_WIND_CABC_MODE_SUPPORT=n
 CONFIG_WIND_HBM_SUPPORT=y
 CONFIG_WIND_BACKLIGHT_CURVE=y
-CONFIG_MOTO_AOD_BASE_ON_AP_SENSORS=y
-#tuwenzan@wind-mobi.com modify at 20170314 end
 CONFIG_CUSTOM_KERNEL_ALSPS=y
 #tuwenzan@wind-mobi.com modify at 20170405 begin
 # CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
@@ -251,7 +271,6 @@ CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_MTK_HWMON=y
 # CONFIG_CUSTOM_KERNEL_MAGNETOMETER is not set
 # CONFIG_MTK_AKM09911_NEW is not set
-#tuwenzan@wind-mobi.com modify at 20170405 end
 
 CONFIG_MTK_BTCVSD=y
 CONFIG_MTK_BTIF=y
@@ -283,6 +302,34 @@ CONFIG_MTK_DEVAPC_DRIVER=y
 CONFIG_MTK_DRAMC=y
 CONFIG_MTK_EMI_D2P=y
 CONFIG_MTK_LEDS=y
+CONFIG_LIGHTNESS_MAPPING_VALUE=255
+#wifi adapters support
+CONFIG_WLAN=y
+CONFIG_RTL8187=m
+CONFIG_RTL8187_LEDS=y
+CONFIG_RT2X00=m
+CONFIG_RT2500USB=m
+CONFIG_RT73USB=m
+CONFIG_RT2800USB=m
+CONFIG_RT2800USB_RT33XX=y
+CONFIG_RT2800USB_RT35XX=y
+CONFIG_RT2800USB_RT3573=y
+CONFIG_RT2800USB_RT53XX=y
+CONFIG_RT2800USB_RT55XX=y
+CONFIG_RT2800USB_UNKNOWN=y
+CONFIG_RT2800_LIB=m
+CONFIG_RT2X00_LIB_USB=m
+CONFIG_RT2X00_LIB=m
+CONFIG_RT2X00_LIB_FIRMWARE=y
+CONFIG_RT2X00_LIB_CRYPTO=y
+CONFIG_RT2X00_LIB_LEDS=y
+#CONFIG_RT2X00_DEBUG is not set
+CONFIG_RTL_CARDS=m
+CONFIG_RTL8192CU=m
+CONFIG_RTLWIFI=m
+CONFIG_RTLWIFI_USB=m
+#CONFIG_RTLWIFI_DEBUG is not set
+CONFIG_RTL8192C_COMMON=m
 CONFIG_MTK_PWM=y
 CONFIG_MTK_RTC=y
 CONFIG_MTK_SMI_EXT=y
@@ -488,8 +535,30 @@ CONFIG_MTK_EMMC_SUPPORT=y
 CONFIG_MTK_EMMC_CACHE=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
+
+#
+# LED driver for blink(1) USB RGB LED is under Special HID drivers (HID_THINGM)
+#
+CONFIG_LEDS_BLINKM=y
+CONFIG_LEDS_SYSCON=y
+
+#
+# LED Triggers
+#
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
+CONFIG_LEDS_TRIGGER_ONESHOT=y
+CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+CONFIG_LEDS_TRIGGER_CPU=y
+CONFIG_LEDS_TRIGGER_GPIO=y
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
+
+#
+# iptables trigger is under Netfilter config (LED target)
+#
+CONFIG_LEDS_TRIGGER_TRANSIENT=y
+CONFIG_LEDS_TRIGGER_CAMERA=y
 CONFIG_SWITCH=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_SYSTOHC is not set
@@ -594,7 +663,6 @@ CONFIG_KERNEL_LZ4=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_CRYPTO_LZ4=y
-CONFIG_ZRAM_LZ4_COMPRESS=y
-
+CONFIG_DECOMPRESS_LZ4=y
 # WireGuard
 CONFIG_WIREGUARD=y
