defconfig:update missing configs
Signed-off-by: mhdzumair <mhdzumair@gmail.com>

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -26,6 +26,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_EMBEDDED=y
+CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 # CONFIG_BLK_DEV_BSG is not set
@@ -420,6 +421,8 @@ CONFIG_KPD_PMIC_LPRST_TD=0
 CONFIG_KPD_PWRKEY_USE_PMIC=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT=y
+#CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_MOT_UTAG=y
 # CONFIG_SERIO is not set
 # CONFIG_VT is not set
@@ -542,7 +545,9 @@ CONFIG_LEDS_CLASS=y
 #
 CONFIG_LEDS_BLINKM=y
 CONFIG_LEDS_SYSCON=y
-
+CONFIG_HID_THINGM=y
+CONFIG_HID=y
+CONFIG_LEDS_LM3530=y
 #
 # LED Triggers
 #
@@ -566,6 +571,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_SYNC=y
