defconfig:fix & update configs
Signed-off-by: mhdzumair <mhdzumair@gmail.com>

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -14,10 +14,6 @@ CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
-CONFIG_MODULE_SRCVERSION_ALL=y
-# CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_COMPRESS is not set
 CONFIG_KSM=y
 CONFIG_IPV6=y
 CONFIG_NET_UDP_TUNNEL=y
@@ -285,8 +281,12 @@ CONFIG_MTK_CMDQ=y
 CONFIG_MTK_FLASHLIGHT=y
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 CONFIG_MTK_GPU_SUPPORT=y
-CONFIG_MTK_GPU_VERSION="mali midgard r18p0"
+CONFIG_MTK_GPU_VERSION="mali midgard r12p0"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
+Config_MTK_GPU_SPM_DVFS_SUPPORT=y
+CONFIG_MALI_MIDGARD=y
+CONFIG_MALI_DEVFREQ=y
+CONFIG_MALI_EXPERT=y
 CONFIG_MTK_IMGSENSOR=y
 CONFIG_MTK_JPEG=y
 CONFIG_MTK_LCM=y
@@ -518,11 +518,6 @@ CONFIG_DVB_TUNER_DIB0090=y
 #
 # Graphics support
 #
-
-#
-# ARM GPU Configuration
-#
-CONFIG_MALI400=y
 
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
