--- a/drivers/misc/mediatek/video/Kconfig
+++ b/drivers/misc/mediatek/video/Kconfig
@@ -16,6 +16,19 @@ config MTK_VIDEOX
 	help
 	  CONFIG_MTK_VIDEOX
 
+config MTK_VIDEOX_CYNGN_LIVEDISPLAY
+	bool CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY
+	default n
+	help
+		Enable the RGB interface for color calibration.
+
+
+config MTK_KCAL_CTRL
+	bool "MTK_KCAL_CTRL"
+	default y
+	help
+	  Enable RGB color calibration.
+		
 config MTK_LCM_PHYSICAL_ROTATION
 	string "MTK_LCM_PHYSICAL_ROTATION"
 	help
