hotplug:Added thunderplug hotplug driver

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -733,3 +733,7 @@ CONFIG_CRYPTO_LZ4=y
 CONFIG_DECOMPRESS_LZ4=y
 # WireGuard
 CONFIG_WIREGUARD=y
+
+#Hotplug Drivers
+CONFIG_THUNDERPLUG_CONTROL=y
+CONFIG_HAS_EARLYSUSPEND=y
