--- a/drivers/misc/mediatek/connectivity/Kconfig
+++ b/drivers/misc/mediatek/connectivity/Kconfig
@@ -364,3 +364,9 @@ config LCT_OPEN_WIFI_40MHZ
 	help
 		This config is used to control WIFI bandrate
 		for 40MHz
+
+config MTK_WIFI_PM_CONTROL
+        tristate "Mediatek Wi-Fi PM Control"
+        default n
+        help
+          Interface to control Wi-Fi Power Saver Modes
