CONSYS_MT6735:Added support to AP & STA on wlan0
Signed-off-by: mhdzumair <mhdzumair@gmail.com>

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -743,3 +743,6 @@ CONFIG_POWERSUSPEND=y
 
 #wifi pm driver
 CONFIG_MTK_WIFI_PM_CONTROL=y
+
+#wifi tethering support in wlan0
+#CONFIG_MTK_COMBO_AOSP_TETHERING_SUPPORT=y
