cpufreq:Added cpu-boost driver thanks to @franciscofranco
Signed-off-by: mhdzumair <mhdzumair@gmail.com>

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -747,3 +747,5 @@ CONFIG_MTK_WIFI_PM_CONTROL=y
 
 #wifi tethering support in wlan0
 #CONFIG_MTK_COMBO_AOSP_TETHERING_SUPPORT=y
+
+CONFIG_CPU_BOOST=y
