--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -741,6 +741,9 @@ CONFIG_ALUCARD_HOTPLUG=y
 
 #powersuspend
 CONFIG_POWERSUSPEND=y
+#earlysuspend
+CONFIG_HAS_EARLYSUSPEND=y
+CONFIG_EARLYSUSPEND=y
 
 #wifi pm driver
 CONFIG_MTK_WIFI_PM_CONTROL=y
