--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -18,6 +18,9 @@ config SUSPEND_FREEZER
 
 	  Turning OFF this setting is NOT recommended! If in doubt, say Y.
 
+config HAS_EARLYSUSPEND
+	bool
+
 config WAKELOCK
 	bool "Android's method of preventing suspend"
 	default y
@@ -34,6 +37,15 @@ config POWERSUSPEND
 	  Call early suspend handlers when the user requested sleep state
 	  changes.
 
+config EARLYSUSPEND
+	bool "Early suspend"
+	depends on WAKELOCK
+	default y
+	select HAS_EARLYSUSPEND
+	---help---
+	  Call early suspend handlers when the user requested sleep state
+	  changes.
+		
 config HIBERNATE_CALLBACKS
 	bool
 
