charging:port thunderplug driver to competible with switch_charging
Signed-off-by: mhdzumair <mhdzumair@gmail.com>

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -723,8 +723,9 @@ CONFIG_WIND_OTG_HDD_SUPPORT=y
 CONFIG_MTK_MD_SBP_CUSTOM_VALUE=0
 # END IKANGEROW-2471
 
-#USB_FASTCHARGE
+#Charger Control
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_THUNDERCHARGE_CONTROL=y
 
 #LZ4 Compression
 CONFIG_KERNEL_LZ4=y
