config:remove powersuspand & add wq power

--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -271,7 +271,7 @@ CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 CONFIG_MTK_GPU_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali midgard r12p1"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
-Config_MTK_GPU_SPM_DVFS_SUPPORT=y
+CONFIG_MTK_GPU_SPM_DVFS_SUPPORT=y
 CONFIG_MALI_MIDGARD=y
 CONFIG_MALI_DEVFREQ=y
 CONFIG_MALI_EXPERT=y
@@ -741,7 +741,9 @@ CONFIG_THUNDERPLUG_CONTROL=y
 CONFIG_ALUCARD_HOTPLUG=y
 
 #powersuspend
-CONFIG_POWERSUSPEND=y
+#CONFIG_POWERSUSPEND=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+
 #earlysuspend
 CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_EARLYSUSPEND=y
