--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -752,7 +752,7 @@ CONFIG_EARLYSUSPEND=y
 CONFIG_MTK_WIFI_PM_CONTROL=y
 
 #wifi tethering support in wlan0
-#CONFIG_MTK_COMBO_AOSP_TETHERING_SUPPORT=y
+CONFIG_MTK_COMBO_AOSP_TETHERING_SUPPORT=y
 
 CONFIG_CPU_BOOST=y
 
